# otae-bot

./: .env  .env.dev  .env.prod  .gitignore  README.md  bot.py  db_otaebot.sql  install.bat  pyproject.toml  requirements.txt  start.bat
configs/: config.py  path_config.py
plugins/EFTBullet/: Ammo.py  Test.py  __init__.py  ammo.json  buildImg.py  db.py  object.py
plugins/EFTHelper/: __init__.py  buildImg.py  db.py  object.py
plugins/EFTHelper/old/: db.py
plugins/McModQuery/: __init__.py
plugins/McWikiQuery/: __init__.py
plugins/TrWikiQuery/: __init__.py
plugins/Tsugu-nb/: __init__.py  api.py  config.json  config.py  entity.py  handler.py  util.py
plugins/Tsugu-nb/v2/: Test.py  __init__.py  api.py  config.json  entity.py  util.py
plugins/addFriend/: __init__.py  configUtil.py
plugins/bilibilibot/: __init__.py  bilibili_2.db
plugins/help/: __init__.py
plugins/minecraft_plugin/: __init__.py  data_source.py  draw.py  ping.py
plugins/recreation/: __init__.py
plugins/steamInfo/: __init__.py  config.py  data_source.py  draw.py  models.py  steam.py
res/img/apex/: bg.psd
res/json/: hotta.json  playerScores.json
utils/: ApexRankImage_builder.py  HottaImageBuilder.py  db.py  image_utils.py  logs.py  message_builder.py  utils.py
